--- a/css/style.css
+++ b/css/style.css
@@ -1033,7 +1033,7 @@ button.btn1:hover {
 
 footer {
     padding: 5em 0;
-    background-color: #0e0f10;
+    background-color: #2a2c31;
 }
 
 footer h3,
