--- a/css/appab5d.css
+++ b/css/appab5d.css
@@ -1519,15 +1519,6 @@ img {
     vertical-align: middle;
 }
 
-.carousel-inner > .item > a > img,
-.carousel-inner > .item > img,
-.img-responsive,
-.thumbnail a > img,
-.thumbnail > img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
 
 .img-rounded {
     border-radius: 6px;
@@ -7688,260 +7679,6 @@ button.close {
     border-left-color: #fff;
 }
 
-.carousel {
-    position: relative;
-}
-
-.carousel-inner {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-}
-
-.carousel-inner > .item {
-    position: relative;
-    display: none;
-    -webkit-transition: .6s ease-in-out left;
-    transition: .6s ease-in-out left;
-}
-
-.carousel-inner > .item > a > img,
-.carousel-inner > .item > img {
-    line-height: 1;
-}
-
-@media all and (transform-3d), (-webkit-transform-3d) {
-    .carousel-inner > .item {
-        -webkit-transition: -webkit-transform .6s ease-in-out;
-        transition: -webkit-transform .6s ease-in-out;
-        transition: transform .6s ease-in-out;
-        transition: transform .6s ease-in-out, -webkit-transform .6s ease-in-out;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-        -webkit-perspective: 1000px;
-        perspective: 1000px;
-    }
-
-    .carousel-inner > .item.active.right,
-    .carousel-inner > .item.next {
-        left: 0;
-        -webkit-transform: translate3d(100%, 0, 0);
-        transform: translate3d(100%, 0, 0);
-    }
-
-    .carousel-inner > .item.active.left,
-    .carousel-inner > .item.prev {
-        left: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-
-    .carousel-inner > .item.active,
-    .carousel-inner > .item.next.left,
-    .carousel-inner > .item.prev.right {
-        left: 0;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-.carousel-inner > .active,
-.carousel-inner > .next,
-.carousel-inner > .prev {
-    display: block;
-}
-
-.carousel-inner > .active {
-    left: 0;
-}
-
-.carousel-inner > .next,
-.carousel-inner > .prev {
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-
-.carousel-inner > .next {
-    left: 100%;
-}
-
-.carousel-inner > .prev {
-    left: -100%;
-}
-
-.carousel-inner > .next.left,
-.carousel-inner > .prev.right {
-    left: 0;
-}
-
-.carousel-inner > .active.left {
-    left: -100%;
-}
-
-.carousel-inner > .active.right {
-    left: 100%;
-}
-
-.carousel-control {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 15%;
-    font-size: 20px;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-    background-color: rgba(0, 0, 0, 0);
-    filter: alpha(opacity=50);
-    opacity: .5;
-}
-
-.carousel-control.left {
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.0001)));
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0, rgba(0, 0, 0, 0.0001) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
-    background-repeat: repeat-x;
-}
-
-.carousel-control.right {
-    right: 0;
-    left: auto;
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(0, 0, 0, 0.0001)), to(rgba(0, 0, 0, 0.5)));
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.5) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
-    background-repeat: repeat-x;
-}
-
-.carousel-control:focus,
-.carousel-control:hover {
-    color: #fff;
-    text-decoration: none;
-    filter: alpha(opacity=90);
-    outline: 0;
-    opacity: .9;
-}
-
-.carousel-control .glyphicon-chevron-left,
-.carousel-control .glyphicon-chevron-right,
-.carousel-control .icon-next,
-.carousel-control .icon-prev {
-    position: absolute;
-    top: 50%;
-    z-index: 5;
-    display: inline-block;
-    margin-top: -10px;
-}
-
-.carousel-control .glyphicon-chevron-left,
-.carousel-control .icon-prev {
-    left: 50%;
-    margin-left: -10px;
-}
-
-.carousel-control .glyphicon-chevron-right,
-.carousel-control .icon-next {
-    right: 50%;
-    margin-right: -10px;
-}
-
-.carousel-control .icon-next,
-.carousel-control .icon-prev {
-    width: 20px;
-    height: 20px;
-    font-family: serif;
-    line-height: 1;
-}
-
-.carousel-control .icon-prev:before {
-    content: '\2039';
-}
-
-.carousel-control .icon-next:before {
-    content: '\203A';
-}
-
-.carousel-indicators {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    z-index: 15;
-    width: 60%;
-    padding-left: 0;
-    margin-left: -30%;
-    text-align: center;
-    list-style: none;
-}
-
-.carousel-indicators li {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 1px;
-    text-indent: -999px;
-    cursor: pointer;
-    background-color: #000 \9;
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid #fff;
-    border-radius: 10px;
-}
-
-.carousel-indicators .active {
-    width: 12px;
-    height: 12px;
-    margin: 0;
-    background-color: #fff;
-}
-
-.carousel-caption {
-    position: absolute;
-    right: 15%;
-    bottom: 20px;
-    left: 15%;
-    z-index: 10;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-}
-
-.carousel-caption .btn {
-    text-shadow: none;
-}
-
-@media screen and (min-width: 768px) {
-    .carousel-control .glyphicon-chevron-left,
-    .carousel-control .glyphicon-chevron-right,
-    .carousel-control .icon-next,
-    .carousel-control .icon-prev {
-        width: 30px;
-        height: 30px;
-        margin-top: -10px;
-        font-size: 30px;
-    }
-
-    .carousel-control .glyphicon-chevron-left,
-    .carousel-control .icon-prev {
-        margin-left: -10px;
-    }
-
-    .carousel-control .glyphicon-chevron-right,
-    .carousel-control .icon-next {
-        margin-right: -10px;
-    }
-
-    .carousel-caption {
-        right: 20%;
-        left: 20%;
-        padding-bottom: 30px;
-    }
-
-    .carousel-indicators {
-        bottom: 20px;
-    }
-}
 
 .btn-group-vertical > .btn-group:after,
 .btn-group-vertical > .btn-group:before,
@@ -18162,148 +17899,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
  * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
  */
 
-.owl-carousel,
-.owl-carousel .owl-item {
-    -webkit-tap-highlight-color: transparent;
-    position: relative;
-}
-
-.owl-carousel {
-    display: none;
-    width: 100%;
-    z-index: 1;
-}
-
-.owl-carousel .owl-stage {
-    position: relative;
-    -ms-touch-action: pan-Y;
-    touch-action: manipulation;
-    -moz-backface-visibility: hidden;
-}
-
-.owl-carousel .owl-stage:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
-}
-
-.owl-carousel .owl-stage-outer {
-    position: relative;
-    overflow: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-}
-
-.owl-carousel .owl-item,
-.owl-carousel .owl-wrapper {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-}
-
-.owl-carousel .owl-item {
-    min-height: 1px;
-    float: left;
-    -webkit-backface-visibility: hidden;
-    -webkit-touch-callout: none;
-}
-
-.owl-carousel .owl-item img {
-    display: block;
-    width: 100%;
-}
-
-.owl-carousel .owl-dots.disabled,
-.owl-carousel .owl-nav.disabled {
-    display: none;
-}
-
-.no-js .owl-carousel,
-.owl-carousel.owl-loaded {
-    display: block;
-}
-
-.owl-carousel .owl-dot,
-.owl-carousel .owl-nav .owl-next,
-.owl-carousel .owl-nav .owl-prev {
-    cursor: pointer;
-    cursor: hand;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.owl-carousel .owl-nav button.owl-next,
-.owl-carousel .owl-nav button.owl-prev,
-.owl-carousel button.owl-dot {
-    background: 0 0;
-    color: inherit;
-    border: none;
-    padding: 0 !important;
-    font: inherit;
-}
-
-.owl-carousel.owl-loading {
-    opacity: 0;
-    display: block;
-}
-
-.owl-carousel.owl-hidden {
-    opacity: 0;
-}
-
-.owl-carousel.owl-refresh .owl-item {
-    visibility: hidden;
-}
-
-.owl-carousel.owl-drag .owl-item {
-    -ms-touch-action: none;
-    touch-action: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.owl-carousel.owl-grab {
-    cursor: move;
-    cursor: -webkit-grab;
-    cursor: grab;
-}
-
-.owl-carousel.owl-rtl {
-    direction: rtl;
-}
-
-.owl-carousel.owl-rtl .owl-item {
-    float: right;
-}
-
-.owl-carousel .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-}
-
-.owl-carousel .owl-animated-in {
-    z-index: 0;
-}
-
-.owl-carousel .owl-animated-out {
-    z-index: 1;
-}
-
-.owl-carousel .fadeOut {
-    -webkit-animation-name: fadeOut;
-    animation-name: fadeOut;
-}
 
 @keyframes fadeOut {
     0% {
@@ -18319,74 +17914,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     -webkit-transition: height .5s ease-in-out;
     transition: height .5s ease-in-out;
 }
-
-.owl-carousel .owl-item .owl-lazy {
-    opacity: 0;
-    -webkit-transition: opacity .4s ease;
-    transition: opacity .4s ease;
-}
-
-.owl-carousel .owl-item img.owl-lazy {
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-
-.owl-carousel .owl-video-wrapper {
-    position: relative;
-    height: 100%;
-    background: #000;
-}
-
-.owl-carousel .owl-video-play-icon {
-    position: absolute;
-    height: 80px;
-    width: 80px;
-    left: 50%;
-    top: 50%;
-    margin-left: -40px;
-    margin-top: -40px;
-    background: url(../../images/owl.video.play9a7d.png?4cbde124d6cd8122c801118696c16f07) no-repeat;
-    cursor: pointer;
-    z-index: 1;
-    -webkit-backface-visibility: hidden;
-    -webkit-transition: -webkit-transform .1s ease;
-    transition: -webkit-transform .1s ease;
-    transition: transform .1s ease;
-    transition: transform .1s ease, -webkit-transform .1s ease;
-}
-
-.owl-carousel .owl-video-play-icon:hover {
-    -webkit-transform: scale(1.3, 1.3);
-    transform: scale(1.3, 1.3);
-}
-
-.owl-carousel .owl-video-playing .owl-video-play-icon,
-.owl-carousel .owl-video-playing .owl-video-tn {
-    display: none;
-}
-
-.owl-carousel .owl-video-tn {
-    opacity: 0;
-    height: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    -webkit-transition: opacity .4s ease;
-    transition: opacity .4s ease;
-}
-
-.owl-carousel .owl-video-frame {
-    position: relative;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-}
-
-/**
- * Owl Carousel v2.3.2
- * Copyright 2013-2018 David Deutsch
- * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
- */
 
 .owl-theme .owl-dots,
 .owl-theme .owl-nav {
@@ -19203,7 +18730,7 @@ strong {
 }
 
 .cabecera_principal {
-    background: #2a2c31;
+    background: white;
     position: relative;
     -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
@@ -19385,7 +18912,7 @@ strong {
 .cbp-hsmenu li a {
     font-size: 14px;
     font-weight: 500;
-    color: #ecedf1; /* cabecera2*/
+    color: #030a27; /* cabecera2*/
 }
 
 .cbp-hsmenu-wrapper .cbp-hsmenu {
@@ -19557,93 +19084,6 @@ figure.effect-bubba > img {
 
 figure.effect-bubba:hover > img {
     opacity: 0.4;
-}
-
-.carousel_educacion figure {
-    overflow: visible;
-}
-
-.carousel_educacion figure.effect-bubba > img {
-    -webkit-transition: -webkit-transform 0.35s;
-    transition: -webkit-transform 0.35s;
-    transition: transform 0.35s;
-    transition: transform 0.35s, -webkit-transform 0.35s;
-    -webkit-transform: perspective(1000px) translate3d(0, 0, 0);
-    transform: perspective(1000px) translate3d(0, 0, 0);
-    opacity: 1;
-}
-
-.carousel_educacion figure.effect-bubba:hover > img {
-    -webkit-transform: perspective(200px) translate3d(0, 0, 11px);
-    transform: perspective(200px) translate3d(0, 0, 11px);
-    opacity: 0.5;
-}
-
-.carousel_educacion figure.effect-bubba {
-    -webkit-transition: -webkit-transform 0.35s;
-    transition: -webkit-transform 0.35s;
-    transition: transform 0.35s;
-    transition: transform 0.35s, -webkit-transform 0.35s;
-    -webkit-transform: perspective(1000px) translate3d(0, 0, 0);
-    transform: perspective(1000px) translate3d(0, 0, 0);
-}
-
-.carousel_educacion figure.effect-bubba:hover {
-    -webkit-transform: perspective(124px) translate3d(0, 0, 10px);
-    transform: perspective(124px) translate3d(0, 0, 10px);
-}
-
-.carousel_educacion .grid figure h2 {
-    font-size: 30px;
-    font-weight: 500;
-    position: absolute;
-    bottom: 3rem;
-    width: 100%;
-    text-align: left;
-    left: 0;
-    padding-left: 12%;
-}
-
-.carousel_educacion figure.effect-bubba:hover h2 {
-    padding-top: 0;
-}
-
-.carousel_educacion figure.effect-bubba figcaption::before,
-.carousel_educacion figure.effect-bubba figcaption::after {
-    position: absolute;
-    top: -13px;
-    right: -13px;
-    bottom: -13px;
-    left: -13px;
-    content: '';
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s, -webkit-transform 0.35s;
-}
-
-.carousel_educacion figure.effect-bubba figcaption::before {
-    border-top: 13px solid #0652fd;
-    border-bottom: 13px solid #0652fd;
-    -webkit-transform: scale(0, 1);
-    transform: scale(0, 1);
-}
-
-.carousel_educacion figure.effect-bubba figcaption::after {
-    border-right: 13px solid #0652fd;
-    border-left: 13px solid #0652fd;
-    -webkit-transform: scale(1, 0);
-    transform: scale(1, 0);
-}
-
-.carousel_educacion figcaption img.b_icono {
-    width: 64px;
-    margin-left: 6%;
-}
-
-.carousel_educacion figure {
-    margin: 15% 0;
 }
 
 figure.effect-bubba figcaption::before,
@@ -20759,57 +20199,6 @@ footer a:hover {
     text-decoration: none;
 }
 
-.carousel_noticia .owl-dots {
-    position: absolute;
-    bottom: 7%;
-    left: 22.555%;
-    margin-left: -24px;
-    counter-reset: slides-num;
-    width: 42rem;
-}
-
-.carousel_noticia .owl-theme .owl-dots .owl-dot.active span,
-.carousel_noticia .owl-theme .owl-dots .owl-dot:hover span {
-    background: #0652fd;
-}
-
-.carousel_noticia .owl-theme .owl-dots .owl-dot:focus {
-    outline: none;
-}
-
-.carousel_noticia .owl-dots:after {
-    content: counter(slides-num);
-    display: inline-block;
-    font-size: 11px;
-    color: #fff;
-    vertical-align: middle;
-    padding-left: 5px;
-    position: absolute;
-    top: 0;
-    left: 10px;
-}
-
-.carousel_noticia .owl-dot {
-    display: inline-block;
-    counter-increment: slides-num;
-    margin-right: 5px;
-}
-
-.carousel_noticia .owl-dot span {
-    display: none;
-}
-
-.carousel_noticia .owl-dot.active:before {
-    content: counter(slides-num) " /";
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 11px;
-    color: #fff;
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
 .prev_text {
     overflow: hidden;
     max-height: 160px;
@@ -21492,22 +20881,6 @@ figure.effect-lily:hover p {
         margin-right: 0;
     }
 
-    .carousel_noticia .owl-dots {
-        bottom: 7px;
-        left: 0;
-        margin-left: auto;
-        width: 100%;
-    }
-
-    .carousel_noticia .owl-dot.active::before {
-        left: 8px;
-        content: "";
-    }
-
-    .carousel_noticia .owl-dots::after {
-        left: 20px;
-        content: "";
-    }
 
     .caja_noticia a {
         margin: 5px 0;
@@ -21594,22 +20967,6 @@ figure.effect-lily:hover p {
         margin-right: 0;
     }
 
-    .carousel_noticia .owl-dots {
-        bottom: 7px;
-        left: 0;
-        margin-left: auto;
-        width: 100%;
-    }
-
-    .carousel_noticia .owl-dot.active::before {
-        left: 8px;
-        content: "";
-    }
-
-    .carousel_noticia .owl-dots::after {
-        left: 20px;
-        content: "";
-    }
 
     .caja_noticia a {
         margin: 5px 0;
@@ -24071,23 +23428,7 @@ body {
     counter-reset: my-sec-counter;
 }
 
-.banner {
-    height: 640px;
-    background-size: cover;
-    overflow: hidden;
-    width: 100%;
-    position: relative;
-}
 
-.banner h1 {
-    color: #fff;
-    top: 35%;
-    width: 100%;
-    text-align: center;
-    font-size: 85px;
-    text-transform: uppercase;
-    position: absolute;
-}
 
 .linea {
     display: block;
@@ -24348,13 +23689,7 @@ body {
 }
 
 @media (max-width: 1366px) {
-    .banner h1 {
-        font-size: 60px;
-    }
 
-    .banner {
-        height: 400px;
-    }
 
     .admision-otros .linea .img.circle1 {
         left: 22%;
@@ -24398,15 +23733,6 @@ body {
     }
 }
 
-@media (max-width: 1199px) {
-    .banner {
-        height: 300px;
-    }
-
-    .banner h1 {
-        font-size: 40px;
-    }
-}
 
 @media (min-width: 1100px) {
     .box_small,
@@ -24485,13 +23811,7 @@ body {
 }
 
 @media (max-width: 550px) {
-    .banner {
-        height: 200px;
-    }
 
-    .banner h1 {
-        font-size: 2.5rem;
-    }
 
     .infr h1 {
         font-size: 20px;
@@ -24539,24 +23859,6 @@ body {
 .intern {
     overflow: hidden;
     width: 100%;
-}
-
-.banner_autoridad {
-    height: 640px;
-    background-size: cover;
-    overflow: hidden;
-    width: 100%;
-    position: relative;
-}
-
-.banner_autoridad h1 {
-    color: #fff;
-    top: 35%;
-    width: 100%;
-    text-align: center;
-    font-size: 85px;
-    text-transform: uppercase;
-    position: absolute;
 }
 
 .box_ed {
@@ -24705,15 +24007,6 @@ article span {
     }
 }
 
-@media (max-width: 1366px) {
-    .banner_autoridad h1 {
-        font-size: 60px;
-    }
-
-    .banner_autoridad {
-        height: 400px;
-    }
-}
 
 @media (max-width: 1199px) {
     .banner_autoridad {
